fix gallery spacing

--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,10 @@ h2 {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .content-column {
@@ -151,16 +155,14 @@ h2 {
 }
 
 .gallery-image {
-  /* min-width: 100%; */
-  /* min-height: 100%; */
   /* max-height: 100%; */
-  /* height: auto; */
   max-width: 100%;
   
   /* transform: scale(1); */
   filter: grayscale(100%);
   transition: .6s;
   transform-origin: center;
+  display: block;
 }
 
 .gallery-image:hover {
@@ -173,6 +175,10 @@ h2 {
   height: 350px;
   overflow: hidden;
   border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgray;
 }
 
 .modal {
